<resources>
    <string name="splash_icon">Splash Icon</string>
    <string name="splash_subtitle">From GAPZ</string>
    <string name="app_name">BluChat</string>
    <string name="animation">Animation</string>
    <string name="status">Status</string>
    <string name="connect">Connect</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_send">Send</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="cancel">Cancel</string>
    <string name="author_name">Author</string>
    <string name="chat_message">Message</string>
</resources>