<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/devices_layout_height"
        android:background="@color/primary_dark"
        android:fontFamily="@font/happy_monkey"
        android:gravity="center"
        android:text="@string/paired_devices"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/pairedDeviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        android:cacheColorHint="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/devices_layout_height"
        android:background="@color/primary_dark"
        android:fontFamily="@font/happy_monkey"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/discovered_devices"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/discoveredDeviceList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/cancel"
        android:textColor="#ffffff" />


</LinearLayout>