<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatbg">

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/chatList_bottom_margin"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:fadingEdge="none"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toTopOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chatBar_start_margin"
        android:layout_marginEnd="@dimen/chatBar_end_margin"
        android:layout_marginBottom="@dimen/chatBar_bottom_margin"
        android:layout_weight="1"
        android:background="@drawable/round_shape"
        android:gravity="start|center_vertical"
        android:hint="@string/prompt_msg"
        android:imeActionLabel="@string/action_send"
        android:imeOptions="actionUnspecified"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        android:padding="@dimen/chatBar_padding"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sendButton_start_margin"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="@dimen/sendButton_bottom_margin"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/action_send"
        android:padding="10dp"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_layout" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_margin_top"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/status"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationIV" />

    <ImageView
        android:id="@+id/animationIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/animation"
        android:contentDescription="@string/animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>